Bug 161631 - FILEOPEN: DOCX: paragraph not imported
Summary: FILEOPEN: DOCX: paragraph not imported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:25.2.0 target:24.2.5 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-06-18 10:14 UTC by Xisco Faulí
Modified: 2025-02-10 19:56 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparsion LibreOffice 24.8 master vs Word 2021 (30.37 KB, image/png)
2024-06-18 10:14 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2024-06-18 10:14:45 UTC
Created attachment 194794 [details]
Comparsion LibreOffice 24.8 master vs Word 2021

Steps to reproduce:
1. Open attachment 57859 [details] from bug 46821

-> "Some Text" should be displayed in paragraph 1

Reproduced in

Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 567dbcf68711402736f65f4a0a47ef57549fe50f
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2024-06-18 10:16:10 UTC
Regression introduced by:

author	Michael Stahl <michael.stahl@allotropia.de>	2024-02-01 12:53:07 +0100
committer	Caolán McNamara <caolan.mcnamara@collabora.com>	2024-02-06 20:34:02 +0100
commit b5a31c9cd0b53957a716a487e203f13919bac64c (patch)
tree 4cdd0e6b14f014840b306968f5c8acc6360e2a10
parent 23d9c8ea006ad62b757f2610df1ad1c73c53b624 (diff)
writerfilter: fix missing paragraph break on tdf136445-1.rtf

Bisected with: bibisect-linux64-24.2
Comment 2 Commit Notification 2024-06-19 16:28:16 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ef77086255821d61838a7e26fee9baadaca0b9e0

tdf#161631 writerfilter: move another member to SubstreamContext

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Stahl 2024-06-19 16:32:10 UTC
fixed on master
Comment 4 Commit Notification 2024-06-20 08:46:46 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/cd67e6bbc398d248553b4a163cf76f1655615b32

tdf#161631 writerfilter: move another member to SubstreamContext

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-06-20 08:50:49 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/e6dfa85f02209fe93365192886f87ce6d4765f39

tdf#161631 writerfilter: move another member to SubstreamContext

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-06-21 17:38:30 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a820696263e62ffc7ebe0a9f6d51bec2e1354926

tdf#161631: sw_ooxmlexport21: Add unittest

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-02-10 19:56:29 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/8dbe6383d9c4691ee29ba8c6299e659a8c8c4348

tdf#161631: sw_ooxmlexport21: Add unittest

It will be available in 24.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.