tdf#161631 writerfilter: move another member to SubstreamContext

The problem is that the bugdoc contains a table in the footer, which
causes m_bDummyParaAddedForTableInSection to be set, which erroneously
causes the last paragraph in the body to be removed.

(regression from commit 86ad08f9d25110e91e92a0badf6de75e785b3644)

Change-Id: I148785c54c37dc25f7d239b5898aec9fb5455f40
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169191
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Jenkins
(cherry picked from commit ef77086255821d61838a7e26fee9baadaca0b9e0)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169209